# SpamAttacker

./: LICENSE  README.md  main.py  pyproject.toml
spamattacker/: main.py
